add tensor2tensor (attention is all you need)
TODO: how to safely use conda with pip...

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "pinn"]
 	path = pinn
 	url = https://github.com/insperatum/pinn.git
+[submodule "tensor2tensor"]
+	path = tensor2tensor
+	url = https://github.com/tensorflow/tensor2tensor.git
